--- a/app/src/main/res/layout/wallet_activity_main.xml
+++ b/app/src/main/res/layout/wallet_activity_main.xml
@@ -19,14 +19,14 @@
         android:layout_height="1dp"
         android:background="@color/wallet_line_gray"/>
 
-    <android.support.design.widget.TabLayout
+    <com.idhub.wallet.common.tablayout.TabLayout
         android:id="@+id/tab_layout"
         android:layout_width="match_parent"
         android:layout_height="48dp"
         android:layout_marginTop="6dp"
-        app:tabTextAppearance="@style/WalletTabLayoutTextStyle"
-        app:tabTextColor="@color/wallet_text_grey"
-        app:tabSelectedTextColor="@color/wallet_blue"
+        app:wallet_tabSelectedTextColor="@color/wallet_blue"
+        app:wallet_tabTextColor="@color/wallet_text_grey"
+        app:wallet_tabTextSize="14sp"
         app:tabRippleColor="@android:color/transparent"
         app:tabIndicatorHeight="0dp" />
 
