--- a/app/src/main/res/layout/wallet_common_title_layout.xml
+++ b/app/src/main/res/layout/wallet_common_title_layout.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.idhub.wallet.common.TitleLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.idhub.wallet.common.title.TitleLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="48dp"
+    android:background="@color/wallet_white"
     xmlns:tools="http://schemas.android.com/tools">
 
     <ImageView
@@ -66,4 +67,4 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintRight_toLeftOf="@id/image_one"
         app:layout_constraintTop_toTopOf="parent" />
-</com.idhub.wallet.common.TitleLayout>
+</com.idhub.wallet.common.title.TitleLayout>
