--- a/app/src/main/res/layout/wallet_fragment_wallet.xml
+++ b/app/src/main/res/layout/wallet_fragment_wallet.xml
@@ -20,12 +20,22 @@
         android:background="@drawable/wallet_shape_wallet_card"
         app:layout_constraintTop_toBottomOf="@id/title">
 
+        <ImageView
+            android:id="@+id/iv_wallet_menu"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:layout_marginRight="20dp"
+            android:src="@mipmap/wallet_detail_menu"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
         <TextView
             android:id="@+id/tv_wallet_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="30dp"
-            android:layout_marginTop="28dp"
+            android:layout_marginTop="20dp"
             android:textColor="@color/wallet_white"
             android:textSize="16sp"
             app:layout_constraintLeft_toLeftOf="parent"
@@ -56,38 +66,63 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             tools:text="0.00" />
+
+        <TextView
+            android:id="@+id/tv_ein_number"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="30dp"
+            android:layout_marginBottom="30dp"
+            android:textColor="@color/wallet_white"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            tools:text="EIN_NUMBER" />
+
+        <TextView
+            android:id="@+id/tv_ein_address"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="30dp"
+            android:textColor="@color/wallet_white"
+            android:textSize="12sp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/tv_ein_number"
+            tools:text="0xqefslkfjsflksehfs...dskjfhskfh" />
+
     </android.support.constraint.ConstraintLayout>
 
-    <android.support.design.widget.TabLayout
-        android:id="@+id/tab_layout"
+    <TextView
+        android:id="@+id/tv_assets_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        app:layout_constraintTop_toBottomOf="@id/wallet_card"
-        app:tabIndicatorHeight="0dp"
-        app:tabSelectedTextColor="@color/wallet_black"
-        app:tabTextColor="@color/wallet_hint">
+        android:layout_marginLeft="16dp"
+        android:layout_marginTop="15dp"
+        android:text="@string/wallet_assets"
+        android:textColor="@color/wallet_black"
+        android:textSize="26dp"
+        android:textStyle="bold"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/wallet_card" />
 
-        <android.support.design.widget.TabItem
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="资产" />
-
-        <android.support.design.widget.TabItem
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="收藏" />
-    </android.support.design.widget.TabLayout>
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginRight="28dp"
+        android:src="@mipmap/wallet_add_assets"
+        app:layout_constraintBottom_toBottomOf="@id/tv_assets_title"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="@id/tv_assets_title" />
 
     <android.support.v4.widget.SwipeRefreshLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_marginTop="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tab_layout">
-     <android.support.v4.view.ViewPager
-         android:id="@+id/view_pager"
-         android:layout_width="match_parent"
-         android:layout_height="match_parent"/>
+        app:layout_constraintTop_toBottomOf="@id/tv_assets_title">
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/rv_assets"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
     </android.support.v4.widget.SwipeRefreshLayout>
 </android.support.constraint.ConstraintLayout>
