--- a/app/src/main/res/values/wallet_styles.xml
+++ b/app/src/main/res/values/wallet_styles.xml
@@ -7,10 +7,6 @@
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
     </style>
-    <style name="WalletTabLayoutTextStyle" parent="TextAppearance.Design.Tab">
-        <item name="android:textSize">14dp</item>
-        <item name="textAllCaps">false</item>
-    </style>
 
     <style name="WalletCommonButton">
         <item name="android:layout_width">330dp</item>
@@ -19,5 +15,9 @@
         <item name="android:gravity">center</item>
         <item name="android:textColor">@color/wallet_white</item>
         <item name="android:textSize">18sp</item>
+    </style>
+    <style name="WalletAnimation">
+        <item name="android:windowEnterAnimation">@anim/wallet_in_anim</item>
+        <item name="android:windowExitAnimation">@anim/wallet_out_anim</item>
     </style>
 </resources>
