--- a/app/src/main/res/layout/wallet_dialog_fragment_wallet_list.xml
+++ b/app/src/main/res/layout/wallet_dialog_fragment_wallet_list.xml
@@ -9,7 +9,8 @@
         android:id="@+id/iv_cancel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="20dp"
+        android:layout_marginLeft="10dp"
+        android:padding="10dp"
         android:src="@mipmap/wallet_cancel"
         app:layout_constraintBottom_toBottomOf="@id/tv_title"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -32,8 +33,9 @@
         android:id="@+id/iv_setting"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginRight="20dp"
+        android:layout_marginRight="10dp"
         android:src="@mipmap/wallet_setting"
+        android:padding="10dp"
         app:layout_constraintBottom_toBottomOf="@id/tv_title"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="@id/tv_title" />
