--- a/app/src/main/res/layout/wallet_fragment_wallet.xml
+++ b/app/src/main/res/layout/wallet_fragment_wallet.xml
@@ -12,84 +12,13 @@
         layout="@layout/wallet_common_title_layout"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <android.support.constraint.ConstraintLayout
+    <include
         android:id="@+id/wallet_card"
+        layout="@layout/wallet_recyclerview_wallet_item"
         android:layout_width="match_parent"
         android:layout_height="150dp"
         android:layout_margin="12dp"
-        android:background="@drawable/wallet_shape_wallet_card"
-        app:layout_constraintTop_toBottomOf="@id/title">
-
-        <ImageView
-            android:id="@+id/iv_wallet_menu"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:layout_marginRight="20dp"
-            android:src="@mipmap/wallet_detail_menu"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <TextView
-            android:id="@+id/tv_wallet_name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="30dp"
-            android:layout_marginTop="20dp"
-            android:textColor="@color/wallet_white"
-            android:textSize="16sp"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:text="ETH-Wallet" />
-
-        <TextView
-            android:id="@+id/tv_wallet_address"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="30dp"
-            android:textColor="@color/wallet_white"
-            android:textSize="12sp"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/tv_wallet_name"
-            tools:text="0xqefslkfjsflksehfs...dskjfhskfh" />
-
-        <TextView
-            android:id="@+id/tv_wallet_amount"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="30dp"
-            android:layout_marginTop="28dp"
-            android:layout_marginRight="20dp"
-            android:layout_marginBottom="15dp"
-            android:textColor="@color/wallet_white"
-            android:textSize="30sp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            tools:text="0.00" />
-
-        <TextView
-            android:id="@+id/tv_ein_number"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="30dp"
-            android:layout_marginBottom="30dp"
-            android:textColor="@color/wallet_white"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            tools:text="EIN_NUMBER" />
-
-        <TextView
-            android:id="@+id/tv_ein_address"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="30dp"
-            android:textColor="@color/wallet_white"
-            android:textSize="12sp"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/tv_ein_number"
-            tools:text="0xqefslkfjsflksehfs...dskjfhskfh" />
-
-    </android.support.constraint.ConstraintLayout>
+        app:layout_constraintTop_toBottomOf="@id/title" />
 
     <TextView
         android:id="@+id/tv_assets_title"
@@ -105,9 +34,11 @@
         app:layout_constraintTop_toBottomOf="@id/wallet_card" />
 
     <ImageView
+        android:id="@+id/add_token"
+        android:padding="10dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginRight="28dp"
+        android:layout_marginRight="15dp"
         android:src="@mipmap/wallet_add_assets"
         app:layout_constraintBottom_toBottomOf="@id/tv_assets_title"
         app:layout_constraintRight_toRightOf="parent"
