--- a/app/src/main/res/values/wallet_colors.xml
+++ b/app/src/main/res/values/wallet_colors.xml
@@ -6,6 +6,7 @@
 
     <color name="wallet_line_gray">#f3f3f3</color>
     <color name="wallet_blue">#0993c2</color>
+    <color name="wallet_blue_text">#087eff</color>
     <color name="wallet_white">#ffffff</color>
     <color name="wallet_black">#191c1e</color>
     <color name="wallet_text_grey">#818d96</color>
@@ -14,7 +15,7 @@
     <color name="wallet_orange">#fed601</color>
     <color name="wallet_hint">#DFDFDF</color>
     <color name="wallet_edittext_color">#63727d</color>
-    <color name="wallet_background">#f0f5f3</color>
+    <color name="wallet_background">#fafafa</color>
 
 
 </resources>
