--- a/app/src/main/res/values/wallet_styles.xml
+++ b/app/src/main/res/values/wallet_styles.xml
@@ -16,8 +16,14 @@
         <item name="android:textColor">@color/wallet_white</item>
         <item name="android:textSize">18sp</item>
     </style>
+
     <style name="WalletAnimation">
         <item name="android:windowEnterAnimation">@anim/wallet_in_anim</item>
         <item name="android:windowExitAnimation">@anim/wallet_out_anim</item>
+    </style>
+
+    <style name="WalletTabLayout">
+        <item name="android:textSize">20sp</item>
+        <item name="android:textAllCaps">false</item>
     </style>
 </resources>
