--- a/app/src/main/res/layout/wallet_activity_identity_manager.xml
+++ b/app/src/main/res/layout/wallet_activity_identity_manager.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".identitymanager.IdentityManagerActivity">
+    tools:context=".createmanager.IdentityManagerActivity">
 
     <TextView
         android:id="@+id/tv_identity_create"
