--- a/app/src/main/res/layout/wallet_activity_input_password.xml
+++ b/app/src/main/res/layout/wallet_activity_input_password.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".identitymanager.identitycreate.InputPasswordActivity">
+    tools:context=".createmanager.walletcreate.InputPasswordActivity">
 
     <include
         android:id="@+id/title"
