--- a/app/src/main/res/layout/wallet_activity_mnemonic_backup_hint.xml
+++ b/app/src/main/res/layout/wallet_activity_mnemonic_backup_hint.xml
@@ -4,34 +4,35 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".identitymanager.identitycreate.MnemonicBackupHintActivity">
+    tools:context=".createmanager.walletcreate.MnemonicBackupHintActivity">
 
-    <include
-        android:id="@+id/title"
-        layout="@layout/wallet_common_title_layout"
-        app:layout_constraintTop_toTopOf="parent" />
+    <!--<include-->
+    <!--android:id="@+id/title"-->
+    <!--layout="@layout/wallet_common_title_layout"-->
+    <!--app:layout_constraintTop_toTopOf="parent" />-->
 
     <TextView
         android:id="@+id/tv_backup_hint_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="70dp"
         android:text="@string/wallet_backup_hint"
         android:textColor="@color/wallet_black"
         android:textSize="25sp"
         android:textStyle="bold"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/title" />
+        app:layout_constraintTop_toBottomOf="@id/title"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/tv_backup_top"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="23dp"
+        android:layout_marginTop="13dp"
         android:text="@string/wallet_backup_hint_top"
         android:textColor="@color/wallet_text_grey"
-        android:textSize="20sp"
+        android:textSize="16sp"
         android:textStyle="bold"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -41,42 +42,66 @@
         android:id="@+id/tv_backup_first"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="25dp"
+        android:layout_marginTop="25dp"
         android:text="@string/wallet_backup_mnemonic"
+        android:textColor="@color/wallet_black"
+        android:textStyle="bold"
+        app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tv_backup_top" />
 
     <TextView
         android:id="@+id/tv_backup_first_1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="25dp"
+        android:layout_marginTop="10dp"
         android:text="@string/wallet_backup_hint_first_1"
+        app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tv_backup_first" />
 
     <TextView
         android:id="@+id/tv_backup_first_2"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="25dp"
+        android:layout_marginTop="5dp"
         android:text="@string/wallet_backup_hint_first_2"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tv_backup_first_1" />
 
     <TextView
         android:id="@+id/tv_backup_two"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="25dp"
+        android:layout_marginTop="15dp"
         android:text="@string/wallet_offline_manager"
+        android:textColor="@color/wallet_black"
+        android:textStyle="bold"
+        app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tv_backup_first_2" />
 
     <TextView
         android:id="@+id/tv_backup_two_1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="25dp"
+        android:layout_marginTop="10dp"
         android:text="@string/wallet_backup_hint_two_1"
+        app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tv_backup_two" />
 
     <TextView
         android:id="@+id/tv_backup_two_2"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="25dp"
+        android:layout_marginTop="5dp"
         android:text="@string/wallet_backup_hint_two_2"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tv_backup_two_1" />
 
     <TextView
