--- a/app/src/main/res/layout/wallet_activity_receive.xml
+++ b/app/src/main/res/layout/wallet_activity_receive.xml
@@ -62,7 +62,7 @@
             android:id="@+id/amount"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="25dp"
+            android:layout_marginTop="15dp"
             android:gravity="center"
             android:textColor="@color/wallet_black"
             android:textSize="20dp"
@@ -83,14 +83,51 @@
             app:layout_constraintTop_toBottomOf="@id/amount" />
 
         <View
+            android:id="@+id/line1"
             android:layout_width="match_parent"
             android:layout_height="1dp"
             android:layout_marginTop="20dp"
-            app:layout_constraintTop_toBottomOf="@id/qr_code"
-            android:background="@color/wallet_line_gray" />
-         <TextView
-             android:text="@string/wallet_designated_amount"
-             android:layout_width="wrap_content"
-             android:layout_height="wrap_content" />
+            android:background="@color/wallet_line_gray"
+            app:layout_constraintTop_toBottomOf="@id/qr_code" />
+
+        <TextView
+            android:id="@+id/tv_designated_Amount"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingTop="25dp"
+            android:paddingBottom="25dp"
+            android:text="@string/wallet_designated_amount"
+            android:textColor="@color/wallet_blue_text"
+            android:textSize="18sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toLeftOf="@id/line2"
+            app:layout_constraintTop_toBottomOf="@id/line1" />
+
+        <View
+            android:id="@+id/line2"
+            android:layout_width="1dp"
+            android:layout_height="0dp"
+            android:layout_marginTop="15dp"
+            android:layout_marginBottom="15dp"
+            android:background="@color/wallet_line_gray"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/line1" />
+
+        <TextView
+            android:id="@+id/tv_change_assets"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingTop="25dp"
+            android:paddingBottom="25dp"
+            android:text="@string/wallet_change_assets"
+            android:textColor="@color/wallet_blue_text"
+            android:textSize="18sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toRightOf="@id/line2"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/line1" />
     </android.support.constraint.ConstraintLayout>
 </android.support.constraint.ConstraintLayout>
