--- a/app/src/main/res/layout/wallet_activity_transaction.xml
+++ b/app/src/main/res/layout/wallet_activity_transaction.xml
@@ -17,53 +17,74 @@
 
     <ImageView
         android:id="@+id/coin_icon"
-        android:layout_width="150dp"
-        android:layout_height="150dp"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
         android:layout_marginTop="30dp"
         android:src="@mipmap/wallet_eth_icon"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/title" />
 
-    <ImageView
-        android:id="@+id/receive"
-        android:layout_width="64dp"
-        android:layout_height="64dp"
+    <TextView
+        android:id="@+id/balance_and_name"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
-        android:background="@drawable/wallet_circle_blue"
-        android:scaleType="center"
-        android:src="@mipmap/wallet_send"
+        android:textColor="@color/wallet_black"
+        android:textSize="20sp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/coin_icon"
+        tools:text="00 ETH" />
+
+    <LinearLayout
+        android:id="@+id/receive"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="25dp"
+        android:orientation="vertical"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toLeftOf="@id/send"
-        app:layout_constraintTop_toBottomOf="@id/coin_icon" />
+        app:layout_constraintTop_toBottomOf="@id/balance_and_name">
 
-    <TextView
+        <ImageView
+            android:layout_width="64dp"
+            android:layout_height="64dp"
+            android:background="@drawable/wallet_circle_blue"
+            android:scaleType="center"
+            android:src="@mipmap/wallet_send" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginTop="10dp"
+            android:text="@string/wallet_receive"
+            android:textColor="@color/wallet_blue" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/send"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:text="@string/wallet_receive"
-        android:textColor="@color/wallet_blue"
-        app:layout_constraintLeft_toLeftOf="@id/receive"
-        app:layout_constraintRight_toRightOf="@id/receive"
-        app:layout_constraintTop_toBottomOf="@id/receive" />
-
-    <ImageView
-        android:id="@+id/send"
-        android:layout_width="64dp"
-        android:layout_height="64dp"
-        android:scaleType="center"
-        android:src="@mipmap/wallet_receive"
+        android:orientation="vertical"
         app:layout_constraintLeft_toRightOf="@id/receive"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="@id/receive" />
+        app:layout_constraintTop_toTopOf="@id/receive">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:text="@string/wallet_send"
-        android:textColor="@color/wallet_blue"
-        app:layout_constraintLeft_toLeftOf="@id/send"
-        app:layout_constraintRight_toRightOf="@id/send"
-        app:layout_constraintTop_toBottomOf="@id/send" />
+        <ImageView
+            android:layout_width="64dp"
+            android:layout_height="64dp"
+            android:scaleType="center"
+            android:src="@mipmap/wallet_receive" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginTop="10dp"
+            android:text="@string/wallet_send"
+            android:textColor="@color/wallet_blue" />
+    </LinearLayout>
+
 </android.support.constraint.ConstraintLayout>
