--- a/app/src/main/res/layout/wallet_activity_send.xml
+++ b/app/src/main/res/layout/wallet_activity_send.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/wallet_white"
+    android:background="@color/wallet_background"
     tools:context=".wallet.transaction.SendActivity">
 
     <include
@@ -16,101 +16,157 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <TextView
-        android:id="@+id/name"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="12dp"
-        android:text="ETH"
-        android:textColor="@color/wallet_black"
-        android:textSize="15sp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/title" />
 
-    <TextView
-        android:id="@+id/balance"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginRight="12dp"
-        android:text="余额: 1ETH"
-        android:textColor="@color/wallet_blue_text"
-        android:textSize="15sp"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="@id/name" />
-
-    <EditText
-        android:id="@+id/input_amount"
+    <android.support.constraint.ConstraintLayout
+        android:id="@+id/cl_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="12dp"
-        android:layout_marginRight="12dp"
-        android:background="@null"
-        android:hint="@string/network_input_amount"
-        android:paddingTop="15dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/balance" />
+        android:background="@color/wallet_white"
+        app:layout_constraintTop_toBottomOf="@id/title">
+
+        <TextView
+            android:id="@+id/name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="12dp"
+            android:layout_marginTop="5dp"
+            tools:text="ETH"
+            android:textColor="@color/wallet_black"
+            android:textSize="15sp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/balance"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="12dp"
+            tools:text="余额: 1ETH"
+            android:textColor="@color/wallet_blue_text"
+            android:textSize="15sp"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="@id/name" />
+
+        <EditText
+            android:id="@+id/input_amount"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="12dp"
+            android:layout_marginRight="12dp"
+            android:background="@null"
+            android:hint="@string/wallet_input_amount"
+            android:textSize="16sp"
+            android:paddingTop="15dp"
+            android:paddingBottom="10dp"
+            android:layout_marginBottom="10dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/balance" />
+    </android.support.constraint.ConstraintLayout>
 
     <View
         android:id="@+id/line1"
         android:layout_width="match_parent"
         android:layout_height="12dp"
         android:layout_marginTop="12dp"
-        android:background="@color/wallet_background"
-        app:layout_constraintTop_toBottomOf="@id/input_amount" />
+        app:layout_constraintTop_toBottomOf="@id/cl_name" />
 
-    <TextView
-        android:id="@+id/address_name"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="12dp"
-        android:text="@string/network_receive_address"
-        android:textColor="@color/wallet_black"
-        android:textSize="15sp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/line1" />
-
-    <EditText
-        android:id="@+id/input_address"
+    <android.support.constraint.ConstraintLayout
+        android:id="@+id/cl_address"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="12dp"
-        android:layout_marginRight="12dp"
-        android:background="@null"
-        android:hint="@string/network_input_address"
-        android:paddingTop="15dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/address_name" />
+        android:background="@color/wallet_white"
+        app:layout_constraintTop_toBottomOf="@id/line1">
 
-    <View
-        android:id="@+id/line2"
-        android:layout_width="match_parent"
-        android:layout_height="12dp"
-        android:layout_marginTop="12dp"
-        android:background="@color/wallet_background"
-        app:layout_constraintTop_toBottomOf="@id/input_address" />
+        <TextView
+            android:id="@+id/address_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="12dp"
+            android:layout_marginTop="5dp"
+            android:text="@string/wallet_receive_address"
+            android:textColor="@color/wallet_black"
+            android:textSize="15sp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <EditText
+            android:id="@+id/input_address"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="12dp"
+            android:layout_marginRight="12dp"
+            android:background="@null"
+            android:hint="@string/wallet_input_address"
+            android:paddingTop="15dp"
+            android:textSize="16sp"
+            android:paddingBottom="10dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginBottom="12dp"
+            app:layout_constraintTop_toBottomOf="@id/address_name" />
+
+    </android.support.constraint.ConstraintLayout>
+
+    <!--<View-->
+        <!--android:id="@+id/line2"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="12dp"-->
+        <!--android:layout_marginTop="12dp"-->
+        <!--app:layout_constraintTop_toBottomOf="@id/cl_address" />-->
+
+    <!--<android.support.constraint.ConstraintLayout-->
+        <!--android:id="@+id/cl_gas"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--app:layout_constraintTop_toBottomOf="@id/line2">-->
+
+        <!--<TextView-->
+            <!--android:id="@+id/gas_name"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_marginLeft="12dp"-->
+            <!--android:layout_marginTop="13dp"-->
+            <!--android:text="@string/network_gas_amount"-->
+            <!--android:textColor="@color/wallet_black"-->
+            <!--android:textSize="15sp"-->
+            <!--app:layout_constraintLeft_toLeftOf="parent"-->
+            <!--app:layout_constraintTop_toTopOf="parent" />-->
+
+        <!--<TextView-->
+            <!--android:id="@+id/gas_amount"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_marginRight="12dp"-->
+            <!--android:paddingTop="13dp"-->
+            <!--android:paddingBottom="13dp"-->
+            <!--android:text="0.000021ether = 0.03"-->
+            <!--android:textColor="@color/wallet_blue_text"-->
+            <!--android:textSize="15sp"-->
+            <!--app:layout_constraintBottom_toBottomOf="parent"-->
+            <!--app:layout_constraintRight_toRightOf="parent"-->
+            <!--app:layout_constraintTop_toTopOf="parent" />-->
+    <!--</android.support.constraint.ConstraintLayout>-->
+
+    <!--<android.support.constraint.ConstraintLayout-->
+        <!--android:id="@+id/cl_gas_detail"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="0dp"-->
+        <!--app:layout_constraintTop_toBottomOf="@id/cl_gas">-->
+        <!--<SeekBar-->
+            <!--android:layout_width="match_parent"-->
+            <!--style="@android:style/Widget.SeekBar"-->
+            <!--android:layout_height="wrap_content" />-->
+    <!--</android.support.constraint.ConstraintLayout>-->
 
     <TextView
-        android:id="@+id/gas_name"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="12dp"
-        android:layout_marginTop="20dp"
-        android:text="@string/network_gas_amount"
-        android:textColor="@color/wallet_black"
-        android:textSize="15sp"
+        android:id="@+id/tv_next"
+        style="@style/WalletCommonButton"
+        android:layout_marginBottom="14dp"
+        android:text="@string/wallet_next"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/line2" />
-
-    <TextView
-        android:id="@+id/gas_amount"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginRight="12dp"
-        android:text="0.000021ether = 0.03"
-        android:textColor="@color/wallet_blue_text"
-        android:textSize="15sp"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="@id/gas_name" />
+        app:layout_constraintRight_toRightOf="parent" />
 </android.support.constraint.ConstraintLayout>
