--- a/app/src/main/res/layout/wallet_wallet_manager_item.xml
+++ b/app/src/main/res/layout/wallet_wallet_manager_item.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.idhub.wallet.wallet.manager.WalletManagerItem xmlns:android="http://schemas.android.com/apk/res/android"
+<com.idhub.wallet.wallet.manager.WalletManagerItemView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -45,4 +45,4 @@
         app:layout_constraintLeft_toLeftOf="@id/tv_name"
         android:background="@color/wallet_line_gray"
         app:layout_constraintBottom_toBottomOf="parent" />
-</com.idhub.wallet.wallet.manager.WalletManagerItem>
+</com.idhub.wallet.wallet.manager.WalletManagerItemView>
