--- a/app/src/main/res/layout/wallet_transaction_message_item.xml
+++ b/app/src/main/res/layout/wallet_transaction_message_item.xml
@@ -34,6 +34,9 @@
         android:layout_marginLeft="3dp"
         app:layout_constraintBottom_toBottomOf="@id/tv_from"
         app:layout_constraintLeft_toRightOf="@id/tv_from"
+        android:ellipsize="middle"
+        android:layout_marginRight="10dp"
+        android:singleLine="true"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="@id/tv_from"
         tools:text="0x4c000E507bE6663e264a1A21507a69Bfa5035D95" />
@@ -46,6 +49,7 @@
         android:layout_marginLeft="15dp"
         android:background="@drawable/wallet_text_background_grey"
         android:padding="5dp"
+        android:layout_marginTop="10dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tv_from"
         android:text="To" />
@@ -56,6 +60,9 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="3dp"
         app:layout_constraintBottom_toBottomOf="@id/tv_to"
+        android:ellipsize="middle"
+        android:layout_marginRight="10dp"
+        android:singleLine="true"
         app:layout_constraintLeft_toRightOf="@id/tv_to"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="@id/tv_to"
@@ -97,7 +104,7 @@
         android:id="@+id/name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginRight="20dp"
+        android:layout_marginRight="10dp"
         android:text="ETH"
         android:textColor="@color/wallet_blue_text"
         android:layout_marginTop="10dp"
