--- a/app/src/main/res/layout/wallet_activity_import_wallet.xml
+++ b/app/src/main/res/layout/wallet_activity_import_wallet.xml
@@ -3,18 +3,15 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:orientation="vertical"
     android:layout_height="match_parent"
-    tools:context=".hository.message.HistoryMessageActivity">
-
+    android:orientation="vertical"
+    tools:context=".createmanager.walletimport.ImportWalletActivity">
     <include
         android:id="@+id/title"
         layout="@layout/wallet_common_title_layout"
         android:layout_width="match_parent"
-        android:layout_height="48dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_height="48dp" />
+
 
     <com.idhub.wallet.common.tablayout.TabLayout
         android:id="@+id/tab_layout"
@@ -25,6 +22,9 @@
         app:wallet_tabTextAppearance="@android:style/TextAppearance.Widget.TabWidget"
         app:wallet_tabSelectedTextColor="@color/wallet_blue"
         app:wallet_tabTextColor="@color/wallet_text_grey"
+        app:wallet_tabIndicatorHeight="1dp"
+        app:wallet_tabIndicatorWidth = "60dp"
+        app:wallet_tabIndicatorColor="@color/wallet_blue"
         app:wallet_tabTextSize="14sp" />
 
     <View
@@ -37,5 +37,4 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="1" />
-
 </LinearLayout>
