--- a/app/src/main/res/layout/wallet_fragment_import_wallet_from_keystore.xml
+++ b/app/src/main/res/layout/wallet_fragment_import_wallet_from_keystore.xml
@@ -1,52 +1,54 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="@color/wallet_white"
-    android:layout_height="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@color/wallet_white">
 
-
-    <TextView
-        android:id="@+id/tip"
-        android:text="@string/wallet_import_wallet_from_keystore_tip"
-        android:layout_width="0dp"
-        android:background="@color/wallet_background"
-        android:paddingTop="15dp"
-        android:paddingBottom="15dp"
-        android:paddingLeft="12dp"
-        android:textSize="16sp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        android:paddingRight="12dp"
-        android:layout_height="wrap_content" />
-
-    <View
-        android:id="@+id/line"
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="1px"
-        app:layout_constraintTop_toBottomOf="@id/tip"
-        android:background="@color/wallet_text_grey" />
+        android:layout_height="match_parent">
 
-    <EditText
-        android:minHeight="120dp"
-        app:layout_constraintTop_toBottomOf="@id/line"
-        android:layout_width="0dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginLeft="12dp"
-        android:layout_marginRight="12dp"
-        android:gravity="left"
-        android:paddingTop="5dp"
-        android:paddingLeft="10dp"
-        android:paddingRight="10dp"
-        android:paddingBottom="5dp"
-        android:textColorHint="@color/wallet_hint"
-        android:textColor="@color/wallet_text_black"
-        app:layout_constraintRight_toRightOf="parent"
-        android:hint="@string/wallet_edit_keystore_tip"
-        android:layout_marginTop="20dp"
-        android:background="@drawable/wallet_shape_edittext"
-        android:layout_height="wrap_content" />
+        <EditText
+            android:id="@+id/password"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="12dp"
+            android:layout_marginRight="12dp"
+            android:background="@null"
+            android:hint="@string/wallet_please_input_password"
+            android:paddingTop="30dp"
+            android:paddingLeft="10dp"
+            android:paddingBottom="5dp"
+            android:textColor="@color/wallet_text_black"
+            android:textColorHint="@color/wallet_hint"
+            android:textSize="15sp"
+            app:layout_constraintTop_toBottomOf="@id/top_view" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <TextView
+            android:id="@+id/tv_import"
+            style="@style/WalletCommonButton"
+            android:layout_marginTop="50dp"
+            android:layout_marginBottom="14dp"
+            android:text="@string/wallet_begin_import"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/password" />
+
+        <View
+            android:layout_width="0dp"
+            android:layout_height="1dp"
+            android:background="@color/wallet_line_gray"
+            app:layout_constraintLeft_toLeftOf="@id/password"
+            app:layout_constraintRight_toRightOf="@id/password"
+            app:layout_constraintTop_toBottomOf="@id/password" />
+
+        <include
+            android:id="@+id/top_view"
+            layout="@layout/wallet_import_wallet_top_view"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</ScrollView>
