--- a/app/src/main/res/layout/wallet_fragment_import_wallet_from_private_key.xml
+++ b/app/src/main/res/layout/wallet_fragment_import_wallet_from_private_key.xml
@@ -1,14 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".createmanager.walletimport.fragment.ImportWalletFromPrivateKeyFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+   <androidx.constraintlayout.widget.ConstraintLayout
+       android:layout_width="match_parent"
+       android:layout_height="match_parent">
 
-</FrameLayout>
+      <include
+          android:id="@+id/input_password"
+          app:layout_constraintLeft_toLeftOf="parent"
+          app:layout_constraintRight_toRightOf="parent"
+          app:layout_constraintTop_toBottomOf="@id/top_view"
+          android:layout_width="0dp"
+          android:layout_height="wrap_content"
+          layout="@layout/wallet_import_wallet_input_password_view" />
+
+      <TextView
+          android:id="@+id/tv_create"
+          style="@style/WalletCommonButton"
+          android:layout_marginTop="50dp"
+          android:layout_marginBottom="14dp"
+          android:text="@string/wallet_begin_import"
+          app:layout_constraintLeft_toLeftOf="parent"
+          app:layout_constraintRight_toRightOf="parent"
+          app:layout_constraintTop_toBottomOf="@id/input_password" />
+
+      <include
+          android:id="@+id/top_view"
+          layout="@layout/wallet_import_wallet_top_view"
+          app:layout_constraintLeft_toLeftOf="parent"
+          app:layout_constraintRight_toRightOf="parent"
+          app:layout_constraintTop_toTopOf="parent" />
+   </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+</ScrollView>
