--- a/app/src/main/res/layout/wallet_activity_import_wallet.xml
+++ b/app/src/main/res/layout/wallet_activity_import_wallet.xml
@@ -5,6 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:focusable="true"
+    android:focusableInTouchMode="true"
     tools:context=".createmanager.walletimport.ImportWalletActivity">
     <include
         android:id="@+id/title"
