--- a/app/src/main/res/layout/wallet_fragment_import_wallet_from_private_key.xml
+++ b/app/src/main/res/layout/wallet_fragment_import_wallet_from_private_key.xml
@@ -20,10 +20,11 @@
           layout="@layout/wallet_import_wallet_input_password_view" />
 
       <TextView
-          android:id="@+id/tv_create"
+          android:id="@+id/tv_import"
           style="@style/WalletCommonButton"
           android:layout_marginTop="50dp"
-          android:layout_marginBottom="14dp"
+          app:layout_constraintBottom_toBottomOf="parent"
+          android:layout_marginBottom="24dp"
           android:text="@string/wallet_begin_import"
           app:layout_constraintLeft_toLeftOf="parent"
           app:layout_constraintRight_toRightOf="parent"
@@ -32,6 +33,17 @@
       <include
           android:id="@+id/top_view"
           layout="@layout/wallet_import_wallet_top_view"
+          app:layout_constraintLeft_toLeftOf="parent"
+          app:layout_constraintRight_toRightOf="parent"
+          app:layout_constraintTop_toTopOf="parent" />
+
+      <include
+          android:id="@+id/loading_and_error"
+          layout="@layout/wallet_common_loading_and_error"
+          android:layout_width="match_parent"
+          android:layout_height="match_parent"
+          android:visibility="gone"
+          app:layout_constraintBottom_toBottomOf="parent"
           app:layout_constraintLeft_toLeftOf="parent"
           app:layout_constraintRight_toRightOf="parent"
           app:layout_constraintTop_toTopOf="parent" />
