--- a/app/src/main/res/layout/wallet_fragment_me_top_view.xml
+++ b/app/src/main/res/layout/wallet_fragment_me_top_view.xml
@@ -21,6 +21,7 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:layout_marginLeft="20dp"
+        android:layout_marginRight="12dp"
         app:layout_constraintBottom_toBottomOf="@id/iv_head"
         app:layout_constraintLeft_toRightOf="@id/iv_head"
         app:layout_constraintRight_toRightOf="parent"
@@ -49,9 +50,11 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="15dp"
-        android:text="recoverAddress:0xasdsdjakd"
+        tools:text="recoverAddress:"
         android:textColor="@color/wallet_white"
         android:singleLine="true"
+        android:ellipsize="middle"
+        android:layout_marginRight="12dp"
         android:textSize="13sp"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toLeftOf="@id/iv_head"
@@ -63,8 +66,10 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
         android:singleLine="true"
+        android:layout_marginRight="12dp"
         android:layout_marginBottom="20dp"
-        android:text="EIN:0xasdsdjakd"
+        tools:text="EIN:"
+        android:ellipsize="middle"
         android:textColor="@color/wallet_white"
         android:textSize="13sp"
         app:layout_constraintRight_toLeftOf="@id/upload_file"
