--- a/app/src/main/res/layout/wallet_import_wallet_input_password_view.xml
+++ b/app/src/main/res/layout/wallet_import_wallet_input_password_view.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.idhub.wallet.createmanager.walletimport.ImportWalletInputPasswordView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -98,4 +98,4 @@
         app:layout_constraintLeft_toLeftOf="@id/password"
         app:layout_constraintRight_toRightOf="@id/password"
         app:layout_constraintTop_toBottomOf="@id/password" />
-</androidx.constraintlayout.widget.ConstraintLayout>
+</com.idhub.wallet.createmanager.walletimport.ImportWalletInputPasswordView>
