--- a/app/src/main/res/layout/wallet_recyclerview_wallet_item.xml
+++ b/app/src/main/res/layout/wallet_recyclerview_wallet_item.xml
@@ -33,12 +33,16 @@
 
     <TextView
         android:id="@+id/tv_wallet_address"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginLeft="30dp"
         android:textColor="@color/wallet_white"
         android:textSize="12sp"
         app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginRight="12dp"
+        android:ellipsize="middle"
+        android:singleLine="true"
         app:layout_constraintTop_toBottomOf="@id/tv_wallet_name"
         tools:text="0xqefslkfjsflksehfs...dskjfhskfh" />
 
