add icon and import wallet

--- a/app/src/main/res/layout/wallet_activity_wallet_manager.xml
+++ b/app/src/main/res/layout/wallet_activity_wallet_manager.xml
@@ -39,8 +39,12 @@
 
         <TextView
             android:id="@+id/tv_wallet_address"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
+            app:layout_constraintRight_toRightOf="parent"
+            android:layout_marginRight="12dp"
+            android:singleLine="true"
+            android:ellipsize="middle"
             app:layout_constraintLeft_toLeftOf="@id/tv_wallet_name"
             app:layout_constraintTop_toBottomOf="@id/tv_wallet_name"
             tools:text="dsakjdaskjfaskjals" />
