--- a/app/src/main/res/layout/activity_history_message.xml
+++ b/app/src/main/res/layout/activity_history_message.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:orientation="vertical"
     android:layout_height="match_parent"
-    tools:context=".hository.message.HistoryMessageActivity">
+    tools:context=".setting.message.HistoryMessageActivity">
 
     <include
         android:id="@+id/title"
