--- a/app/src/main/res/layout/activity_more_transaction_message.xml
+++ b/app/src/main/res/layout/activity_more_transaction_message.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".hository.message.moretransaction.MoreTransactionMessageActivity">
+    tools:context=".setting.message.moretransaction.MoreTransactionMessageActivity">
 
 
     <include
