--- a/app/src/main/res/layout/wallet_fragment_erc20_transaction.xml
+++ b/app/src/main/res/layout/wallet_fragment_erc20_transaction.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".hository.message.moretransaction.fragment.ERC20TransactionFragment">
+    tools:context=".setting.message.moretransaction.fragment.ERC20TransactionFragment">
     <TextView
         android:id="@+id/message_empty"
         android:layout_width="match_parent"
