--- a/app/src/main/res/layout/wallet_recyclerview_wallet_item.xml
+++ b/app/src/main/res/layout/wallet_recyclerview_wallet_item.xml
@@ -19,6 +19,27 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <LinearLayout
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="30dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tv_wallet_name">
+
+        <TextView
+            android:id="@+id/tv_wallet_address"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="12dp"
+            android:drawablePadding="5dp"
+            android:ellipsize="middle"
+            android:singleLine="true"
+            android:textColor="@color/wallet_white"
+            android:textSize="12sp"
+            tools:text="0xqefslkfjsflksadsafhskfh" />
+    </LinearLayout>
+
     <TextView
         android:id="@+id/tv_wallet_name"
         android:layout_width="wrap_content"
@@ -31,20 +52,6 @@
         app:layout_constraintTop_toTopOf="parent"
         tools:text="ETH-Wallet" />
 
-    <TextView
-        android:id="@+id/tv_wallet_address"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="30dp"
-        android:textColor="@color/wallet_white"
-        android:textSize="12sp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginRight="12dp"
-        android:ellipsize="middle"
-        android:singleLine="true"
-        app:layout_constraintTop_toBottomOf="@id/tv_wallet_name"
-        tools:text="0xqefslkfjsflksehfs...dskjfhskfh" />
 
     <TextView
         android:id="@+id/tv_wallet_amount"
@@ -76,17 +83,17 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="30dp"
+        android:layout_marginTop="6dp"
+        android:layout_marginBottom="5dp"
         android:background="@drawable/wallet_background_stroke_black"
         android:paddingLeft="5dp"
         android:paddingTop="3dp"
         android:paddingRight="5dp"
-        android:layout_marginTop="6dp"
         android:paddingBottom="3dp"
         android:text="@string/wallet_upgrade_associated_address"
         android:textColor="@color/wallet_black"
         android:textSize="12sp"
         app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginBottom="5dp"
         app:layout_constraintTop_toBottomOf="@id/tv_ein_number" />
 
 </com.idhub.wallet.wallet.mainfragment.view.WalletItemView>
