--- a/app/src/main/res/layout/wallet_fragment_wallet.xml
+++ b/app/src/main/res/layout/wallet_fragment_wallet.xml
@@ -35,10 +35,11 @@
 
     <ImageView
         android:id="@+id/add_token"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
         android:layout_marginRight="5dp"
         android:padding="10dp"
+        android:scaleType="fitXY"
         android:src="@mipmap/wallet_add_assets"
         app:layout_constraintBottom_toBottomOf="@id/tv_assets_title"
         app:layout_constraintRight_toRightOf="parent"
