--- a/app/src/main/res/layout/wallet_recycler_view_token_item.xml
+++ b/app/src/main/res/layout/wallet_recycler_view_token_item.xml
@@ -7,11 +7,11 @@
 
     <ImageView
         android:id="@+id/iv_token_icon"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="32dp"
+        android:layout_height="32dp"
         android:layout_marginLeft="15dp"
-        android:layout_marginTop="12dp"
-        android:src="@mipmap/wallet_eth_icon"
+        android:scaleType="fitXY"
+        android:layout_marginTop="20dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -27,23 +27,25 @@
         tools:text="ETH" />
 
     <TextView
-        android:id="@+id/tv_token_address"
-        android:layout_width="wrap_content"
+        android:id="@+id/tv_contract_address"
+        android:layout_width="0dp"
+        android:singleLine="true"
+        android:ellipsize="middle"
         android:layout_height="wrap_content"
         android:layout_marginLeft="10dp"
         android:textColor="@color/wallet_text_grey"
         android:textSize="14sp"
         app:layout_constraintLeft_toRightOf="@id/iv_token_icon"
+        app:layout_constraintRight_toLeftOf="@id/iv_token_add"
         app:layout_constraintTop_toBottomOf="@id/tv_token_name"
         tools:text="0xadasdadasdasd" />
 
     <ImageView
         android:id="@+id/iv_token_add"
-        android:layout_width="wrap_content"
+        android:layout_width="50dp"
         android:layout_height="wrap_content"
         android:layout_marginRight="5dp"
         android:padding="10dp"
-        tools:src="@mipmap/wallet_add_assets"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -51,7 +53,7 @@
     <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:layout_marginTop="15dp"
+        android:layout_marginTop="20dp"
         android:background="@color/wallet_line_gray"
         app:layout_constraintTop_toBottomOf="@id/iv_token_icon" />
 </com.idhub.wallet.wallet.token.TokenManagerItemView>
