--- a/app/src/main/res/layout/wallet_recyclerview_assets_item.xml
+++ b/app/src/main/res/layout/wallet_recyclerview_assets_item.xml
@@ -7,8 +7,8 @@
 
     <ImageView
         android:id="@+id/tv_assets_icon"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="32dp"
+        android:layout_height="32dp"
         android:layout_marginLeft="45dp"
         android:layout_marginTop="26dp"
         android:layout_marginBottom="26dp"
@@ -43,16 +43,16 @@
         app:layout_constraintTop_toTopOf="parent"
         android:text="-" />
 
-    <TextView
-        android:id="@+id/tv_assets_rmb"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginRight="36dp"
-        android:textColor="@color/wallet_text_grey"
-        android:textSize="12sp"
-        android:textStyle="bold"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tv_assets_amount"
-        android:text="-"  />
+<!--    <TextView-->
+<!--        android:id="@+id/tv_assets_rmb"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_marginRight="36dp"-->
+<!--        android:textColor="@color/wallet_text_grey"-->
+<!--        android:textSize="12sp"-->
+<!--        android:textStyle="bold"-->
+<!--        app:layout_constraintRight_toRightOf="parent"-->
+<!--        app:layout_constraintTop_toBottomOf="@id/tv_assets_amount"-->
+<!--        android:text="-"  />-->
 
 </com.idhub.wallet.wallet.mainfragment.view.AssetsItemView>
