--- a/app/src/main/res/layout/wallet_recyclerview_assets_st_item.xml
+++ b/app/src/main/res/layout/wallet_recyclerview_assets_st_item.xml
@@ -1,6 +1,57 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<com.idhub.wallet.wallet.mainfragment.view.AssetsErc1400ItemView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <ImageView
+        android:id="@+id/tv_assets_icon"
+        android:layout_width="32dp"
+        android:layout_height="32dp"
+        android:layout_marginLeft="45dp"
+        android:layout_marginTop="26dp"
+        android:layout_marginBottom="26dp"
+        android:src="@mipmap/wallet_eth_icon"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/tv_assets_name"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="15dp"
+        android:textColor="@color/wallet_text_grey"
+        android:textSize="18sp"
+        app:layout_constraintBottom_toBottomOf="@id/tv_assets_icon"
+        app:layout_constraintLeft_toRightOf="@id/tv_assets_icon"
+        app:layout_constraintTop_toTopOf="@id/tv_assets_icon"
+        tools:text="ETH" />
+
+
+    <TextView
+        android:id="@+id/tv_assets_amount"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginRight="36dp"
+        android:textColor="@color/wallet_orange"
+        android:textSize="16sp"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:text="@string/wallet_view_detail" />
+
+    <!--    <TextView-->
+    <!--        android:id="@+id/tv_assets_rmb"-->
+    <!--        android:layout_width="wrap_content"-->
+    <!--        android:layout_height="wrap_content"-->
+    <!--        android:layout_marginRight="36dp"-->
+    <!--        android:textColor="@color/wallet_text_grey"-->
+    <!--        android:textSize="12sp"-->
+    <!--        android:textStyle="bold"-->
+    <!--        app:layout_constraintRight_toRightOf="parent"-->
+    <!--        app:layout_constraintTop_toBottomOf="@id/tv_assets_amount"-->
+    <!--        android:text="-"  />-->
+
+</com.idhub.wallet.wallet.mainfragment.view.AssetsErc1400ItemView>
